--- a/src/sass/style/_section-menu.sass
+++ b/src/sass/style/_section-menu.sass
@@ -1,6 +1,22 @@
-.menu
-    .container
+.about
+    .story-menu
         background-color: white
+        padding: 25px
+        margin-left: 100px
+        margin-right: 100px
         .our-story
             display: flex
             justify-content: space-between
+            align-items: center
+            text-align: center
+            h3
+                font-size: 45px
+        .about-p        
+            text-align: center
+        .menu
+           div
+               .image-a
+                    div
+                       div
+                           img
+                               border-radius: 50%
