--- a/src/sass/style/_header.sass
+++ b/src/sass/style/_header.sass
@@ -1,5 +1,67 @@
-nav
-    width: 100%
-    display: flex
-    justify-content: space-around
-    background-color: black
+header
+    nav
+        a
+            color: white
+        .nav1
+            flex: 5
+            margin: 0
+            padding: 0
+            margin-right: 100px
+            ul
+                border-bottom: grey solid 2px
+                border-top: grey solid 2px
+        .nav2
+            flex: 2
+        .nav3
+            flex: 5
+            margin: 0
+            padding: 0
+            margin-left: 100px
+            ul
+                border-bottom: grey solid 2px
+                border-top: grey solid 2px
+    .carousel
+        .carousel-indicators
+            li
+                border-radius: 50%
+                height: 15px
+                width: 15px
+        div
+            div
+                .carousel-caption
+                    position: static
+                    padding-left: 300px
+                    padding-right: 300px
+                    padding-top: 150px
+                    margin-bottom: 300px
+                    .occasion
+                        font-size: 65px
+                    .taste
+                        font-size: 65px
+                        color: red
+                    .makes-remember
+                        font-size: 60px
+                    h5
+                        font-size: 50px
+                    div
+                        .btn-white
+                            background-color: #ddd
+                            border: none
+                            color: black
+                            padding: 10px 20px
+                            text-align: center
+                            text-decoration: none
+                            display: inline-block
+                            margin: 4px 2px
+                            cursor: pointer
+                            border-radius: 16px
+                        .btn-red
+                            background-color: red
+                            border: none
+                            color: white
+                            padding: 10px 20px
+                            text-align: center
+                            text-decoration: none
+                            display: inline-block
+                            margin: 4px 2px
+                            border-radius: 16px
