--- a/src/sass/style/_section-menu.sass
+++ b/src/sass/style/_section-menu.sass
@@ -1,6 +1,5 @@
 .about
     .story-menu
-        background-color: white
         padding: 25px
         margin-left: 100px
         margin-right: 100px
@@ -17,6 +16,18 @@
            div
                .image-a
                     div
+                       border-bottom: dotted grey .5px
                        div
                            img
                                border-radius: 50%
+                               height: 80px
+                               width: 80px
+               .image-b
+                    div
+                       border-bottom: dotted grey .5px
+                       div
+                           img
+                               border-radius: 50%
+                               height: 80px
+                               width: 80px
+                
