--- a/src/sass/style/_team.sass
+++ b/src/sass/style/_team.sass
@@ -4,6 +4,7 @@
     align-items: center
     justify-content: center
     padding: 50px
+    color: white
     .team-titre
         display: flex
         flex-direction: column
@@ -13,6 +14,7 @@
         display: flex
         align-items: center
         justify-content: center
+        margin-top: 50px
         .chef
             display: flex
             flex-direction: column
