--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10008,6 +10008,10 @@ header .carousel div div .carousel-caption div .btn-red {
 .about .story-menu .menu div .image-a div {
   border-bottom: dotted grey 0.5px;
 }
+.about .story-menu .menu div .image-a div div {
+  display: flex;
+  align-items: center;
+}
 .about .story-menu .menu div .image-a div div img {
   border-radius: 50%;
   height: 80px;
@@ -10015,6 +10019,10 @@ header .carousel div div .carousel-caption div .btn-red {
 }
 .about .story-menu .menu div .image-b div {
   border-bottom: dotted grey 0.5px;
+}
+.about .story-menu .menu div .image-b div div {
+  display: flex;
+  align-items: center;
 }
 .about .story-menu .menu div .image-b div div img {
   border-radius: 50%;
@@ -10096,6 +10104,7 @@ header .carousel div div .carousel-caption div .btn-red {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+  margin-top: 20px;
 }
 .reservation .blog .photos .gauche {
   display: flex;
@@ -10113,7 +10122,7 @@ header .carousel div div .carousel-caption div .btn-red {
 .reservation .blog .photos .gauche .boite-rose {
   background-color: red;
   border-radius: 10px;
-  font-size: 20px;
+  font-size: 15px;
   padding: 15px;
   color: white;
   top: -30px;
@@ -10141,7 +10150,7 @@ header .carousel div div .carousel-caption div .btn-red {
 .reservation .blog .photos .droite .boite-rose {
   background-color: red;
   border-radius: 10px;
-  font-size: 20px;
+  font-size: 15px;
   padding: 15px;
   color: white;
   top: -30px;
@@ -10219,6 +10228,39 @@ header .carousel div div .carousel-caption div .btn-red {
   border-bottom: white solid 1px;
   padding: 20px;
   text-align: center;
+}
+
+footer {
+  background-color: red;
+}
+footer .footer {
+  padding: 50px;
+}
+footer .footer .footer-contenu {
+  display: flex;
+  justify-content: space-around;
+  width: 75%;
+  margin-left: 150px;
+  color: white;
+}
+footer .footer .footer-contenu .footer-m img {
+  margin: 2px;
+  margin-bottom: 6px;
+}
+footer .footer .footer-contenu .footer-d button {
+  margin: 2px;
+  margin-bottom: 6px;
+  font-size: 12px;
+  color: white;
+  background-color: red;
+  border: white solid 1px;
+  border-radius: 20px;
+  padding: 5px;
+  padding-right: 10px;
+  padding-left: 10px;
+}
+footer .footer-red {
+  height: 100px;
 }
 
 /*# sourceMappingURL=app.css.map */
