--- a/src/sass/style/_section-menu.sass
+++ b/src/sass/style/_section-menu.sass
@@ -18,6 +18,8 @@
                     div
                        border-bottom: dotted grey .5px
                        div
+                           display: flex
+                           align-items: center
                            img
                                border-radius: 50%
                                height: 80px
@@ -26,6 +28,8 @@
                     div
                        border-bottom: dotted grey .5px
                        div
+                           display: flex
+                           align-items: center
                            img
                                border-radius: 50%
                                height: 80px
