--- a/src/sass/style/style.sass
+++ b/src/sass/style/style.sass
@@ -5,4 +5,5 @@
 @import ./_team.sass
 @import ./_reservation.sass
 @import ./_testimonials.sass
-@import ./_contact
+@import ./_contact.sass
+@import ./_footer.sass
