--- a/src/sass/style/_reservation.sass
+++ b/src/sass/style/_reservation.sass
@@ -36,6 +36,7 @@
             display: flex
             align-items: center
             justify-content: space-evenly
+            margin-top: 20px
             .gauche
                 display: flex
                 flex-direction: column
@@ -50,7 +51,7 @@
                 .boite-rose
                     background-color: red
                     border-radius: 10px
-                    font-size: 20px
+                    font-size: 15px
                     padding: 15px
                     color: white
                     top: -30px
@@ -74,7 +75,7 @@
                 .boite-rose
                     background-color: red
                     border-radius: 10px
-                    font-size: 20px
+                    font-size: 15px
                     padding: 15px
                     color: white
                     top: -30px
