--- a/src/sass/style/_section-menu.sass
+++ b/src/sass/style/_section-menu.sass
@@ -1,3 +1,7 @@
+.bottom-decoration1
+    position: relative
+    top: -20px
+    margin: 0
 .about
     .story-menu
         padding: 25px
@@ -8,15 +12,18 @@
             justify-content: space-between
             align-items: center
             text-align: center
-            h3
-                font-size: 45px
         .about-p        
             text-align: center
+            div
+                margin-bottom: 20px
         .menu
            div
                .image-a
                     div
                        border-bottom: dotted grey .5px
+                       .text-menu
+                           display: flex
+                           flex-direction: column
                        div
                            display: flex
                            align-items: center
@@ -27,6 +34,9 @@
                .image-b
                     div
                        border-bottom: dotted grey .5px
+                       .text-menu
+                           display: flex
+                           flex-direction: column
                        div
                            display: flex
                            align-items: center
