--- a/src/sass/style/style.sass
+++ b/src/sass/style/style.sass
@@ -1,5 +1,11 @@
 * 
     font-family: 'Courgette', cursive
+    .titres
+        margin-bottom: 20px
+        h3
+            font-size: 30px
+            span
+                font-size: 40px
 @import ./_header.sass
 @import ./_section-menu.sass
 @import ./_team.sass
