--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9912,7 +9912,20 @@ h3 {
 * {
   font-family: "Courgette", cursive;
 }
+* .titres {
+  margin-bottom: 20px;
+}
+* .titres h3 {
+  font-size: 30px;
+}
+* .titres h3 span {
+  font-size: 40px;
+}
 
+header nav {
+  position: sticky;
+  top: 0;
+}
 header nav a {
   color: white;
 }
@@ -9988,6 +10001,12 @@ header .carousel div div .carousel-caption div .btn-red {
   border-radius: 16px;
 }
 
+.bottom-decoration1 {
+  position: relative;
+  top: -20px;
+  margin: 0;
+}
+
 .about .story-menu {
   padding: 25px;
   margin-left: 100px;
@@ -9999,14 +10018,18 @@ header .carousel div div .carousel-caption div .btn-red {
   align-items: center;
   text-align: center;
 }
-.about .story-menu .our-story h3 {
-  font-size: 45px;
-}
 .about .story-menu .about-p {
   text-align: center;
 }
+.about .story-menu .about-p div {
+  margin-bottom: 20px;
+}
 .about .story-menu .menu div .image-a div {
   border-bottom: dotted grey 0.5px;
+}
+.about .story-menu .menu div .image-a div .text-menu {
+  display: flex;
+  flex-direction: column;
 }
 .about .story-menu .menu div .image-a div div {
   display: flex;
@@ -10019,6 +10042,10 @@ header .carousel div div .carousel-caption div .btn-red {
 }
 .about .story-menu .menu div .image-b div {
   border-bottom: dotted grey 0.5px;
+}
+.about .story-menu .menu div .image-b div .text-menu {
+  display: flex;
+  flex-direction: column;
 }
 .about .story-menu .menu div .image-b div div {
   display: flex;
@@ -10069,6 +10096,7 @@ header .carousel div div .carousel-caption div .btn-red {
 .reservation .formulaire {
   margin-left: 200px;
   margin-right: 200px;
+  padding-bottom: 100px;
   padding-left: 150px;
   border-radius: 10px;
   margin-bottom: 40px;
@@ -10113,6 +10141,9 @@ header .carousel div div .carousel-caption div .btn-red {
   justify-content: center;
   margin-left: 5px;
 }
+.reservation .blog .photos .gauche:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
 .reservation .blog .photos .gauche img {
   border-radius: 20px;
   border: grey solid 5px;
@@ -10140,6 +10171,9 @@ header .carousel div div .carousel-caption div .btn-red {
   align-items: center;
   justify-content: center;
   margin-right: 5px;
+}
+.reservation .blog .photos .droite:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .reservation .blog .photos .droite img {
   border-radius: 20px;
@@ -10230,8 +10264,11 @@ header .carousel div div .carousel-caption div .btn-red {
   text-align: center;
 }
 
-footer {
-  background-color: red;
+footer .bottom-decoration2 {
+  position: relative;
+  top: 15px;
+  margin: 0;
+  padding: 0;
 }
 footer .footer {
   padding: 50px;
@@ -10260,6 +10297,7 @@ footer .footer .footer-contenu .footer-d button {
   padding-left: 10px;
 }
 footer .footer-red {
+  background-color: red;
   height: 100px;
 }
 
