--- a/src/sass/style/_footer.sass
+++ b/src/sass/style/_footer.sass
@@ -1,5 +1,9 @@
 footer
-    background-color: red
+    .bottom-decoration2
+        position: relative
+        top: 15px
+        margin: 0
+        padding: 0
     .footer
         padding: 50px
         .footer-contenu
@@ -25,4 +29,5 @@ footer
                     padding-right: 10px
                     padding-left: 10px
     .footer-red
+        background-color: red
         height: 100px
