--- a/src/sass/style/_reservation.sass
+++ b/src/sass/style/_reservation.sass
@@ -8,6 +8,7 @@
     .formulaire
         margin-left: 200px
         margin-right: 200px
+        padding-bottom: 100px
         padding-left: 150px
         border-radius: 10px
         margin-bottom: 40px
@@ -43,6 +44,8 @@
                 align-items: center
                 justify-content: center
                 margin-left: 5px
+                &:hover
+                    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
                 img
                     border-radius: 20px
                     border: grey solid 5px
@@ -67,6 +70,8 @@
                 align-items: center
                 justify-content: center
                 margin-right: 5px
+                &:hover
+                    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
                 img
                     border-radius: 20px
                     border: grey solid 5px
