--- a/src/sass/style/_section-menu.sass
+++ b/src/sass/style/_section-menu.sass
@@ -17,7 +17,20 @@
             div
                 margin-bottom: 20px
         .menu
+           .navbar-menu
+               font-size: 30px
+               a
+                   color: black
+                   padding: 30px
+                   border-bottom: grey solid 1px
+                   border-right: grey solid 1px
+               .div-vide
+                    height: 120px
+                    padding: 0
+                    font-size: 0
+                    border-bottom: none
            div
+               font-size: 12px
                .image-a
                     div
                        border-bottom: dotted grey .5px
